--- a/archive/old_index.css
+++ b/archive/old_index.css
@@ -194,3 +194,20 @@
 .return:hover{
     box-shadow: 1px 1px 15px 5px white;    
 }
+
+/* 
+.landing-text{
+    color: white;
+    font-size: 4em;
+    text-align: center;
+    margin-bottom: 4vh; 
+    text-shadow:
+    -1px -1px 0 #00aeb3,
+    1px -1px 0 #00aeb3,
+    -1px 1px 0 #00aeb3,
+    1px 1px 0 #00aeb3;  
+} */
+
+.footer{
+    background-color: #373d42;
+}
