--- a/styles/index.css
+++ b/styles/index.css
@@ -136,7 +136,21 @@ a{
 }
 
 .contact-img{
-    margin: 3vh;
-    padding: 1vh;
-    width: 5vw;
+    margin: 3.5vh;
+    width: 7em;
+}
+
+@media only screen and (max-width: 1000px) {
+    .contact-img{
+        width: 5em;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .contact-img{
+        margin-left:1.5vh;
+        margin-right:1.5vh;
+        margin-bottom:0;
+        width: 3em;
+    }
 }
