--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,7 @@ text color grey: 898989
     text-align: center;
     margin-bottom: 4vh;
     margin-top: 1vh;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .text{
@@ -43,6 +44,7 @@ text color grey: 898989
     font-size: 3vw;
     text-align: center;
     margin-bottom: 4vh; 
+    font-family: 'Permanent Marker', cursive;
 }
 
 @media only screen and (max-width: 600px) {
@@ -56,7 +58,6 @@ text color grey: 898989
     background-color: #606a70;
     opacity: 0.8;
     border: 2px solid #7fd6d9;
-    
 }
 
 .flex-justify-center{
@@ -82,9 +83,8 @@ text color grey: 898989
     color: #00aeb3;
     font-size: 20px;
     text-align: center;
-    margin-top: 1vh;
-    margin-bottom: 3vh;
-    transition: 0.3s    
+    transition: 0.3s;
+    font-family: 'Permanent Marker', cursive;
 }
 
 a{
