--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,25 @@ title color grey: 414042
 text color grey: 898989
 */
 
+#footer{
+    position: fixed;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    bottom:0;
+    width:100%;
+    height: 11vh;
+    background-color: #373d42;
+    border-top: 4px solid #00aeb3;
+}
+
+.contact-container{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 #portfolio-station{
 
 }
@@ -27,20 +46,25 @@ html{
     margin-top:5vh;
     border: 4px solid #00aeb3;
     color: #00aeb3;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Raleway', sans-serif;
 }
-
-.portfolio-button:hover{
+/* 
+#portfolio-button:hover{
     border: 4px solid #fff;
     color: #fff;
-
-}
+} */
 
 .icon{
     height: 90px;
 }
 
-.portfolio-button{
+.skills{
+    width:100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#portfolio-button{
     margin: 1vh;
     width: 70%;
     max-width: 250px;
@@ -49,8 +73,31 @@ html{
     font-family: 'Raleway', sans-serif;
 }
 
+.project-button{
+    margin: 1vh;
+    min-width: 140px;
+    width: 10vw;
+    border: 4px solid #00aeb3;
+    color: #00aeb3;
+    font-family: 'Raleway', sans-serif;
+}
+
+.project-button:hover{
+    border: 4px solid #fff;
+    color: #fff;
+
+}
+
+select{
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 4px solid #00aeb3;
+    color: #00aeb3;
+    font-size: 30px;
+    transition-duration: .5s;
+}
+
 button{
-    font-family: acre,sans-serif;
     text-transform: uppercase;
     background-color: transparent;
     border: 4px solid #00aeb3;
@@ -74,10 +121,6 @@ button{
     top: 0;
     z-index: 2;
     border-bottom: 4px solid #00aeb3;
-}
-
-.alpha-img{
-    width: 30vw;
 }
 
 .spacer{
@@ -157,6 +200,10 @@ button{
     margin-right: 15%;
 }
 
+.reduce-margin{
+    margin:0;
+}
+
 .github{
     color: #00aeb3;
     font-size: 2vw;
@@ -179,6 +226,11 @@ a{
     transition: 0.7s;
 }
 
+.footer-img{
+    padding:2vh;
+    width: 7em;
+}
+
 .portfolio-img:hover{
     cursor: pointer;
 }
@@ -197,12 +249,6 @@ a{
     margin-right: 10%;    
 }
 
-@media only screen and (max-width: 500px) {
-    .text{
-        top: 1vw;
-    }
-}
-
 .my-img{
     margin-top: 2em;
     margin-bottom: 2em;
@@ -214,6 +260,12 @@ a{
 .contact-img{
     margin: 3.5vh;
     width: 7em;
+}
+
+@media only screen and (max-width: 500px) {
+    .text{
+        top: 1vw;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -234,6 +286,7 @@ a{
 @media only screen and (max-width: 800px) {
     .portfolio{
         display:block;
+        margin: 5% 5% 20% 5%;
     }
     
     .github{
