--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,18 @@ html{
     scroll-behavior: smooth;
 }
 
+.skills-title{
+    font-size: 3vw;
+    padding: 1vh;
+    text-align: center;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top:5vh;
+    border: 4px solid #00aeb3;
+    color: #00aeb3;
+    font-family: 'Raleway', sans-serif;
+}
+
 .portfolio-title{
     font-size: 3vw;
     padding: 1vh;
