--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@ dark grey: 373d42
 light grey: 606a70
 title color grey: 414042
 text color grey: 898989
+yellow: 373d42
 */
 
 #footer{
@@ -45,7 +46,7 @@ html{
     margin-right: 15%;
     margin-top:5vh;
     border: 4px solid #00aeb3;
-    color: #00aeb3;
+    color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -57,7 +58,7 @@ html{
     margin-right: 15%;
     margin-top:5vh;
     border: 4px solid #00aeb3;
-    color: #00aeb3;
+    color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
 /* 
@@ -81,7 +82,7 @@ html{
     width: 70%;
     max-width: 250px;
     border: 4px solid #00aeb3;
-    color: #00aeb3;
+    color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -90,7 +91,7 @@ html{
     min-width: 140px;
     width: 10vw;
     border: 4px solid #00aeb3;
-    color: #00aeb3;
+    color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -100,11 +101,15 @@ html{
 
 }
 
+select option{
+    background:#373d42;
+}
+
 select{
     text-transform: uppercase;
     background-color: transparent;
     border: 4px solid #00aeb3;
-    color: #00aeb3;
+    color: #FFFFFF;
     font-size: 30px;
     transition-duration: .5s;
 }
@@ -113,7 +118,7 @@ button{
     text-transform: uppercase;
     background-color: transparent;
     border: 4px solid #00aeb3;
-    color: #00aeb3;
+    color: #FFFFFF;
     font-size: 30px;
     transition-duration: .5s;
 }
@@ -157,7 +162,7 @@ button{
   }
 
 .title{
-    color: #00aeb3;
+    color: #FFFFFF;
     font-size: 3vw;
     text-align: center;
     margin-bottom: 4vh;
@@ -183,7 +188,12 @@ button{
 }
 
 .landing-text{
-    padding: 2em;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    color: white;
+    font-size:1.75vw;
+    margin: 0 5% 0 5%;
+    padding: 1em;
     background-color: #606a70;
     opacity: 0.8;
     border: 2px solid #7fd6d9;
@@ -245,12 +255,6 @@ a{
 
 .portfolio-img:hover{
     cursor: pointer;
-}
-
-.hr-custom{
-    width: 20vw;
-    position: relative;
-    border-color: #00aeb3;
 }
 
 .hidden-title{
