--- a/styles/index.css
+++ b/styles/index.css
@@ -45,7 +45,6 @@ html{
     margin-left: 15%;
     margin-right: 15%;
     margin-top:5vh;
-    border: 4px solid #00aeb3;
     color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
@@ -57,7 +56,6 @@ html{
     margin-left: 15%;
     margin-right: 15%;
     margin-top:5vh;
-    border: 4px solid #00aeb3;
     color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
@@ -66,6 +64,18 @@ html{
     border: 4px solid #fff;
     color: #fff;
 } */
+
+.text-left{
+    color: white;
+    font-size: 1.5vw;
+    margin-bottom: 4vh; 
+    font-family: 'Raleway', sans-serif;
+    text-align: left;
+}
+
+.text-left li i{
+    padding-right: 5px;
+}
 
 .icon{
     height: 90px;
@@ -149,6 +159,7 @@ button{
     padding: 3%;
     margin: 5% 5% 5% 5%;
     border: 2px solid #7fd6d9;
+    border-radius: 10px;
 }
 
 .parallax {
