--- a/archive/old_index.css
+++ b/archive/old_index.css
@@ -202,12 +202,12 @@
     text-align: center;
     margin-bottom: 4vh; 
     text-shadow:
-    -1px -1px 0 #00aeb3,
-    1px -1px 0 #00aeb3,
-    -1px 1px 0 #00aeb3,
-    1px 1px 0 #00aeb3;  
+    -1px -1px 0 #00F2FA,
+    1px -1px 0 #00F2FA,
+    -1px 1px 0 #00F2FA,
+    1px 1px 0 #00F2FA;  
 } */
 
 .footer{
-    background-color: #373d42;
+    background-color: #00F2FA;
 }
