--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
 Color Schema
 
 light blue: 7fd6d9
-blue: 00aeb3
+blue: 00F2FA
 dark grey: 373d42
 light grey: 606a70
 title color grey: 414042
@@ -20,7 +20,7 @@ yellow: 373d42
     width:100%;
     height: 11vh;
     background-color: #373d42;
-    border-top: 4px solid #00aeb3;
+    border-top: 4px solid #00F2FA;
 }
 
 .contact-container{
@@ -91,7 +91,7 @@ html{
     margin: 1vh;
     width: 70%;
     max-width: 250px;
-    border: 4px solid #00aeb3;
+    border: 4px solid #00F2FA;
     color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
@@ -100,7 +100,7 @@ html{
     margin: 1vh;
     min-width: 140px;
     width: 10vw;
-    border: 4px solid #00aeb3;
+    border: 4px solid #00F2FA;
     color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
 }
@@ -118,7 +118,7 @@ select option{
 select{
     text-transform: uppercase;
     background-color: transparent;
-    border: 4px solid #00aeb3;
+    border: 4px solid #00F2FA;
     color: #FFFFFF;
     font-size: 30px;
     transition-duration: .5s;
@@ -127,7 +127,7 @@ select{
 button{
     text-transform: uppercase;
     background-color: transparent;
-    border: 4px solid #00aeb3;
+    border: 4px solid #00F2FA;
     color: #FFFFFF;
     font-size: 30px;
     transition-duration: .5s;
@@ -147,7 +147,7 @@ button{
     position: fixed;
     top: 0;
     z-index: 2;
-    border-bottom: 4px solid #00aeb3;
+    border-bottom: 4px solid #00F2FA;
 }
 
 .spacer{
@@ -212,7 +212,7 @@ button{
     font-size:1.25vw;
     padding: 1em;
     background-color: #606a70;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .landing-text h2{
@@ -247,7 +247,7 @@ button{
 }
 
 .github{
-    color: #00aeb3;
+    color: #00F2FA;
     font-size: 2vw;
     text-align: center;
     transition: 0.3s;
@@ -366,7 +366,7 @@ a{
 
 
     .title{
-        color: #00aeb3;
+        color: #00F2FA;
         font-size: 10vw;
         margin-bottom: 2vh;
         margin-top: 1vh;
