--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,6 @@ yellow: 373d42
     align-items: center;
     bottom:0;
     width:100%;
-    height: 11vh;
     background-color: #373d42;
     border-top: 4px solid #00F2FA;
 }
@@ -340,6 +339,10 @@ a{
 }
 
 @media only screen and (max-width: 800px) {
+    .footer-img{
+        width: 4rem;
+    }
+
     .project-button{
         width: 40vw;
     }
