--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,28 @@ title color grey: 414042
 text color grey: 898989
 yellow: 373d42
 */
+#nav-link{
+    display: none;
+    flex-direction: column;
+    background-color: #373d42;
+    color: white;
+    font-family: Raleway, sans-serif;
+    padding: 0 30px 0 30px; 
+    top: 80px;
+    right: 0px;
+    font-size:30px;
+    z-index: 1;
+    border: 1px solid #00F2FA;
+}
+
+.nav-sub-link{
+    padding-top: 5px;
+    padding-bottom: 2px;
+}
+
+.nav-sub-link:hover{
+    cursor: pointer;
+}
 
 #footer{
     position: fixed;
@@ -80,12 +102,14 @@ html{
 }
 
 #portfolio-button{
-    margin: 1vh;
+    background-image: url();
     width: 70%;
     max-width: 250px;
     border: 1px solid #00F2FA;
     color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
+    height: 80px;
+    width: 80px;
 }
 
 .button-container{
