minor css change

--- a/styles/index.css
+++ b/styles/index.css
@@ -364,7 +364,7 @@ a{
         flex-direction: column;
     }
     .skills-title{
-        font-size: 4rem;
+        font-size: 8vw;
     }
     .portfolio-title{
         font-size: 8vw;
